#34 Fix header
Fixed the header bar so the songs no longer overlap with it

--- a/BoomBoxWeb/BoomBoxWeb/Pages/SoundBoard.razor.css
+++ b/BoomBoxWeb/BoomBoxWeb/Pages/SoundBoard.razor.css
@@ -130,6 +130,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     background-color: var(--header-color);
+    z-index:3;
 }
 
 /* Styling for theme slider (6 down)*/
